--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
         let options = {
             client_id: '9caecd3a4b7c9dd90a48',
-            redirect: 'http://localhost:3000/oauth',
+            redirect: 'https://autbalqees.herokuapp.com/oauth',
             scope: 'read:user',
             state: 'oauthstate'
         }
